--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <!-- Script principal del botón flotante -->
-    <script src="github.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/gianmattus-programmer/Youtube-Floating-Button/dist/script.js"></script>
     
     <!--
         @note Fin de la página de demostración
